## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## RustQuant: A Rust library for quantitative finance tools.
## Copyright (C) 2022-2024 https://github.com/avhz
## Dual licensed under Apache 2.0 and MIT.
## See:
##      - LICENSE-APACHE.md
##      - LICENSE-MIT.md
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## GENERAL CONFIGURATION
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[package]
name = "RustQuant"
authors = ["avhz <RustQuantContact@gmail.com>"]
description = "A Rust library for quantitative finance."
version = "0.2.7"
edition = "2021"
readme = "README.md"
repository = "https://github.com/avhz/RustQuant"
keywords = [
    "quantitative",
    "finance",
    "option-pricing",
    "monte-carlo",
    "quantlib",
]
categories = ["finance", "mathematics", "science", "algorithms", "simulation"]
license = "MIT OR Apache-2.0"


## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## COMPILATION PROFILES
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

## To compile a release build with debug symbols, use:
## `cargo build --profile=release-with-debug`
[profile.release-with-debug]
inherits = "release"
debug = true

[profile.dev]
debug = 0

## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## RUSTDOC CONFIGURATION
## Includes KaTeX for math rendering.
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--html-in-header", "katex_header.html", "--cfg", "docsrs"]

## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## DEPENDENCIES
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[dependencies]
argmin = "0.10.0"           # https://docs.rs/argmin/latest/argmin/
argmin-math = "0.4.0"       # https://docs.rs/argmin-math/latest/argmin_math/
derive_builder = "0.20.0"   # https://docs.rs/derive_builder/latest/derive_builder/
errorfunctions = "0.2.0"    # https://docs.rs/errorfunctions/latest/errorfunctions/
nalgebra = "0.33.0"         # https://docs.rs/nalgebra/latest/nalgebra/
ndarray = "0.16.1"          # https://docs.rs/ndarray/latest/ndarray/
ndrustfft = "0.4.0"         # https://docs.rs/ndrustfft/latest/ndrustfft/
ndarray-rand = "0.14.0"     # https://docs.rs/ndarray-rand/latest/ndarray_rand/
plotly = "0.10.0"            # https://docs.rs/plotly/latest/plotly/
plotters = "0.3.5"          # https://docs.rs/plotters/latest/plotters/
rand = "0.8.5"              # https://docs.rs/rand/latest/rand/
rand_distr = "0.4.3"        # https://docs.rs/rand_distr/latest/rand_distr/
rayon = "1.9.0"             # https://docs.rs/rayon/latest/rayon/
rust_decimal = "1.34.3"     # https://docs.rs/rust_decimal/latest/rust_decimal/
statrs = "0.17.1"           # https://docs.rs/statrs/latest/statrs/
thiserror = "1.0.57"        # https://docs.rs/thiserror/latest/thiserror/
yahoo_finance_api = "2.1.0" # https://docs.rs/yahoo-finance-api/latest/yahoo_finance_api/
tokio-test = "0.4.3"        # https://docs.rs/tokio-test/latest/tokio_test/


# https://docs.rs/num/latest/num/
num = { version = "0.4.1", features = ["rand"] }

# https://docs.rs/time/latest/time/
time = { version = "0.3.34", features = ["macros"] }

# https://docs.rs/polars/latest/polars/
polars = { version = "0.43.1", features = ["docs-selection"] }

# https://docs.rs/uuid/latest/uuid/
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }


[dev-dependencies]
finitediff = "0.1.4" # https://docs.rs/finitediff/latest/finitediff/


## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## PYTHON BINDINGS
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

# [lib]
# name = "RustQuant"
# crate-type = ["cdylib"]

# [dependencies.pyo3]
# version = "0.22.0"
# features = ["extension-module"]
# features = ["abi3-py37", "extension-module"]
