## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## RustQuant: A Rust library for quantitative finance tools.
## Copyright (C) 2022-2024 https://github.com/avhz
## Dual licensed under Apache 2.0 and MIT.
## See:
##      - LICENSE-APACHE.md
##      - LICENSE-MIT.md
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[workspace.package]
authors = ["avhz <RustQuantContact@gmail.com>"]
description = "A Rust library for quantitative finance."
version = "0.2.10"
edition = "2021"
readme = "README.md"
repository = "https://github.com/avhz/RustQuant"
keywords = [
    "quantitative",
    "finance",
    "option-pricing",
    "monte-carlo",
    "quantlib",
]
categories = ["finance", "mathematics", "science", "algorithms", "simulation"]
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"
members = ["crates/*", "examples"]

[workspace.lints.rust]
missing_docs = "forbid"
non_snake_case = "allow"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "forbid"
doc_markdown = "allow"

## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## COMPILATION PROFILES
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

## To compile a release build with debug symbols, use:
## `cargo build --profile=release-with-debug`
[profile.release-with-debug]
inherits = "release"
debug = true

[profile.dev]
debug = 0

## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## RUSTDOC CONFIGURATION
## Includes KaTeX for math rendering.
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[workspace.package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--html-in-header", "katex_header.html", "--cfg", "docsrs"]

## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## DEPENDENCIES
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[workspace.dependencies]
## RustQuant Crates
RustQuant_autodiff = { version = "0.2.9", path = "crates/RustQuant_autodiff" }
RustQuant_cashflows = { version = "0.2.9", path = "crates/RustQuant_cashflows" }
RustQuant_data = { version = "0.2.9", path = "crates/RustQuant_data" }
RustQuant_error = { version = "0.2.9", path = "crates/RustQuant_error" }
RustQuant_instruments = { version = "0.2.9", path = "crates/RustQuant_instruments" }
RustQuant_iso = { version = "0.2.9", path = "crates/RustQuant_iso" }
RustQuant_math = { version = "0.2.9", path = "crates/RustQuant_math" }
RustQuant_ml = { version = "0.2.9", path = "crates/RustQuant_ml" }
RustQuant_portfolios = { version = "0.2.9", path = "crates/RustQuant_portfolios" }
RustQuant_stochastics = { version = "0.2.9", path = "crates/RustQuant_stochastics" }
RustQuant_time = { version = "0.2.9", path = "crates/RustQuant_time" }
RustQuant_trading = { version = "0.2.9", path = "crates/RustQuant_trading" }
RustQuant_utils = { version = "0.2.9", path = "crates/RustQuant_utils" }

## External Crates
argmin = "0.10.0"           # https://docs.rs/argmin/latest/argmin/
argmin-math = "0.4.0"       # https://docs.rs/argmin-math/latest/argmin_math/
derive_builder = "0.20.0"   # https://docs.rs/derive_builder/latest/derive_builder/
errorfunctions = "0.2.0"    # https://docs.rs/errorfunctions/latest/errorfunctions/
nalgebra = "0.33.0"         # https://docs.rs/nalgebra/latest/nalgebra/
ndrustfft = "0.5.0"         # https://docs.rs/ndrustfft/latest/ndrustfft/
ndarray-rand = "0.15.0"     # https://docs.rs/ndarray-rand/latest/ndarray_rand/
plotly = "0.10.0"           # https://docs.rs/plotly/latest/plotly/
plotters = "0.3.5"          # https://docs.rs/plotters/latest/plotters/
rand = "0.8.5"              # https://docs.rs/rand/latest/rand/
rand_distr = "0.4.3"        # https://docs.rs/rand_distr/latest/rand_distr/
rayon = "1.9.0"             # https://docs.rs/rayon/latest/rayon/
rust_decimal = "1.34.3"     # https://docs.rs/rust_decimal/latest/rust_decimal/
statrs = "0.17.1"           # https://docs.rs/statrs/latest/statrs/
thiserror = "1.0.57"        # https://docs.rs/thiserror/latest/thiserror/
yahoo_finance_api = "2.3.0" # https://docs.rs/yahoo-finance-api/latest/yahoo_finance_api/
tokio-test = "0.4.3"        # https://docs.rs/tokio-test/latest/tokio_test/

# https://docs.rs/ndarray/latest/ndarray/
ndarray = { version = "0.16.1", features = ["rayon"] }

# https://docs.rs/num/latest/num/
num = { version = "0.4.1", features = ["rand"] }

# https://docs.rs/time/latest/time/
time = { version = "0.3.34", features = ["macros"] }

# https://docs.rs/polars/latest/polars/
polars = { version = "0.44.0", features = ["docs-selection"] }

# https://docs.rs/uuid/latest/uuid/
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }

# https://docs.rs/serde/latest/serde/
serde = { version = "1.0.213", features = ["derive"] }

[workspace.dev-dependencies]
finitediff = "0.1.4" # https://docs.rs/finitediff/latest/finitediff/


## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## PYTHON BINDINGS
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

# [lib]
# name = "RustQuant"
# crate-type = ["cdylib"]

# [dependencies.pyo3]
# version = "0.22.0"
# features = ["extension-module"]
# features = ["abi3-py37", "extension-module"]
