[package]
name = "RustQuant-py"
version = "0.0.17"
edition = "2021"
readme = "README.md"
repository = "https://github.com/avhz/RustQuant"
license = "GPL-3.0-or-later"

[lib]
name = "RustQuant"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.19.0"
features = ["abi3-py37", "extension-module"]

[dependencies.RustQuant]
path = "../RustQuant-rs"
