[package]
name = "RustQuant_autodiff"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
ndarray = { workspace = true }
errorfunctions = { workspace = true }
RustQuant_utils = { workspace = true }
