[package]
name = "RustQuant_data"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
metadata.workspace = true

[lints]
workspace = true

[dependencies]
derive_builder = { workspace = true }
RustQuant_time = { workspace = true }
RustQuant_instruments = { workspace = true }
rand = { workspace = true }
RustQuant_math = { workspace = true }
polars = { workspace = true }
yahoo_finance_api = { workspace = true }
time = { workspace = true }
RustQuant_error = { workspace = true }
tokio-test = { workspace = true }
plotly = { workspace = true }
argmin = { workspace = true }
argmin-math = { workspace = true }
RustQuant_stochastics = { workspace = true }
