[package]
name = "RustQuant_data"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
metadata.workspace = true

[lints]
workspace = true

[dev-dependencies]
RustQuant = { path = "../RustQuant" }

[dependencies]
RustQuant_instruments = { workspace = true }
RustQuant_math = { workspace = true }
RustQuant_time = { workspace = true }
RustQuant_error = { workspace = true }
RustQuant_stochastics = { workspace = true }

derive_builder = { workspace = true }
rand = { workspace = true }
time = { workspace = true }
plotly = { workspace = true }
argmin = { workspace = true }
argmin-math = { workspace = true }
pyo3 = { workspace = true }


## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## RUSTDOC CONFIGURATION
## Includes KaTeX for math rendering.
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--html-in-header", "katex.html", "--cfg", "docsrs"]
