[package]
name = "RustQuant_error"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
metadata.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
rand_distr = { workspace = true }
pyo3 = {workspace = true}

## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## RUSTDOC CONFIGURATION
## Includes KaTeX for math rendering.
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--html-in-header", "katex.html", "--cfg", "docsrs"]
