[package]
name = "RustQuant_instruments"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
metadata.workspace = true

[lints]
workspace = true

[dev-dependencies]
RustQuant = { path = "../RustQuant" }

[dependencies]
## Internal dependencies
RustQuant_time = { workspace = true }
RustQuant_math = { workspace = true }
RustQuant_utils = { workspace = true }
RustQuant_stochastics = { workspace = true }
RustQuant_iso = { workspace = true }

## External dependencies
argmin = { workspace = true }
time = { workspace = true }
derive_builder = { workspace = true }
errorfunctions = { workspace = true }
serde = { workspace = true }
num = { workspace = true }
nalgebra = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }

## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## RUSTDOC CONFIGURATION
## Includes KaTeX for math rendering.
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--html-in-header", "katex.html", "--cfg", "docsrs"]
