[package]
name = "RustQuant_math"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
metadata.workspace = true

[lints]
workspace = true

[dev-dependencies]
RustQuant = { path = "../RustQuant" }

[dependencies]
RustQuant_autodiff = { workspace = true }
RustQuant_error = { workspace = true }
RustQuant_utils = { workspace = true }

num = { workspace = true }
errorfunctions = { workspace = true }
time = { workspace = true }
rust_decimal = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
statrs = { workspace = true }

## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
## RUSTDOC CONFIGURATION
## Includes KaTeX for math rendering.
## ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--html-in-header", "katex.html", "--cfg", "docsrs"]
