[package]
name = "RustQuant_time"
authors.workspace = true
description.workspace = true
version.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
metadata.workspace = true

[dependencies]
time = { workspace = true }
RustQuant_iso = { workspace = true }
RustQuant_utils = { workspace = true }
